--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,12 @@ html, body {
   margin-right: 5px;
 }
 
+.content-container {
+  min-height: 100vh;
+  width: 100%;
+}
+
+
 .main-content {
   display: flex;
 }
@@ -112,7 +118,7 @@ html, body {
 }
 
 .dark-mode-button-container {
-  position: absolute;
-  top: 10px; 
-  right: 10px; 
+  position: fixed;
+  top: 10px; /* Adjust the top position as needed */
+  right: 10px; /* Adjust the right position as needed */
 }
